Fixed top spacing on nav bar

--- a/blog/css/text.css
+++ b/blog/css/text.css
@@ -22,10 +22,7 @@ nav.top-nav {
   width: 100%;
   background-color: white;
   position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 90vh;
+  top: 0px;
 }
 
 ul.nav-list {
